CoreModules/AggregationService/aggregation-k8s/aggregation-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: aggregation
  namespace: onaimhub
spec:
  replicas: 1
  selector:
    matchLabels:
      app: aggregation
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: aggregation
    spec:
      containers:
        - name: aggregation
          image: gvgroup/onaim-aggregationservice:latest
          ports:
            - containerPort: 8080
          resources:
            limits:
              memory: "512Mi"
              cpu: "500m"
            requests:
              memory: "256Mi"
              cpu: "250m"
          volumeMounts:
            - mountPath: /app/appsettings.json
              name: aggregation-cm0
              subPath: appsettings.json
      restartPolicy: Always
      volumes:
        - configMap:
            items:
              - key: appsettings.json
                path: appsettings.json
            name: aggregation-cm0
          name: aggregation-cm0
