CoreModules/AggregationService/aggregation-k8s/aggregation-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: aggregation
  namespace: onaimhub
spec:
  ports:
    - name: http
      port: 5006
      targetPort: 8080
  selector:
    app: aggregation
  type: ClusterIP
