CoreModules/AggregationService/aggregation-k8s/aggregationdb-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: aggregationdb
  namespace: onaimhub
spec:
  ports:
    - name: "5438"
      port: 5438
      targetPort: 5432
  selector:
    app: aggregationdb
