CoreModules/AggregationService/aggregation-k8s/aggregation-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: aggregation-ingress
  namespace: onaimhub
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "false" # Set to "true" if SSL is configured
spec:
  ingressClassName: nginx
  rules:
    - host: onaimhub.aggregation.dev.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: adminapi
                port:
                  number: 5006
